--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,7 +28,7 @@ layout: base
       {% include comments.html %}
     </div>
     {% if page.toc %}
-      <div id="panel-wrapper" class="col-xl-3 pl-2 text-muted topbar-down">
+      <div id="panel-wrapper" class="col-xl-2 col-lg-10 offset-lg-1 text-muted topbar-down">
         <div id="toc-wrapper" class="pl-0 pr-4 mb-5">
           <span class="pl-3 pt-2 mb-2">
             Contents
