--- a/_includes/head.html
+++ b/_includes/head.html
@@ -84,12 +84,13 @@
     {% for css in page.css %}
       <link rel="stylesheet" href="{{ css | relative_url }}">
     {% endfor %}
-      {% if site.toc and page.toc %}
-        <link rel="preload" as="style" href="{{ '/assets/css/bootstrap-toc.min.css' | relative_url }}">
-        <link rel="stylesheet" href="{{ '/assets/css/bootstrap-toc.min.css' | relative_url }}" />
-      {% endif %}
   {% endif %}
 
+  {% if page.toc %}
+    <link rel="preload" as="style" href="{{ '/assets/css/bootstrap-toc.min.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/bootstrap-toc.min.css' | relative_url }}" />
+  {% endif %}
+  
   {% if site.fb_app_id %}
   <meta property="fb:app_id" content="{{ site.fb_app_id }}">
   {% endif %}
