--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -27,6 +27,15 @@ layout: null
   padding-bottom: 0.5rem;
 }
 
+nav[data-toggle=toc] .nav-link.active,
+nav[data-toggle=toc] .nav-link.active:focus,
+nav[data-toggle=toc] .nav-link.active:hover,
+nav[data-toggle=toc] .nav > li > a:focus,
+nav[data-toggle=toc] .nav > li > a:hover {
+  color: var(--toc-highlight) !important;
+  border-left-color: var(--toc-highlight) !important;
+}
+
 /* --- General --- */
 
 html {
