--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -38,7 +38,7 @@
 {% endif %}
 
 {% if page.toc %}
-  <link rel="preload" as="style" href="{{ '/assets/css/lib/bootstrap-toc.min.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/lib/bootstrap-toc.min.css' | relative_url }}" />
+  <link rel="preload" as="style" href="{{ '/assets/css/lib/bootstrap-toc.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/lib/bootstrap-toc.css' | relative_url }}" />
 <!--     <script src="/assets/js/lib/bootstrap-toc.min.js"></script> -->
 {% endif %}
