--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
       <p class="copyright text-muted">
       {% if site.author %}
         {{ site.author }}
+          &nbsp;&bull;&nbsp;
       {% endif %}
       {{ site.time | date: '%Y' }}
 
